--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 
+body {
+  font-family: "Inter";
+}
+
 /* <li class="nav-item dropdown">
 <a
   class="nav-link dropdown-toggle"
